--- a/index.html
+++ b/index.html
@@ -25,8 +25,17 @@
     // 🧠 The person also has an `ageGracefully` method, which increases `age` by 1 each time it's called.
     // 🧠 But there's a catch: once `age` reaches 12, the `ageGracefully` method will have no effect.
     class PeterPan {
+  constructor(name) {
+    this.name = name;
+    this.age = 0; 
+  }
 
+  ageGracefully() {
+    if (this.age < 12) {
+      this.age += 1; 
     }
+  }
+}
 
     // 👉 CHALLENGE 2
     // 🧠 Build an AirPlane class. This class allows to instantiate airplanes.
@@ -38,8 +47,26 @@
     // 🧠 Calling `down` changes the `altitude` prop appropriately and returns the updated `altitude`.
     // 🧠 If calling `down` would cause the plane to go below altitude zero, `altitude` is set to 0 and the string "CRASH!" is returned.
     class AirPlane {
+  constructor(model) {
+    this.model = model; 
+    this.altitude = 0; 
+  }
 
+  up(meters) {
+    this.altitude += meters; 
+    return this.altitude; 
+  }
+
+  down(meters) {
+    this.altitude -= meters;
+    if (this.altitude < 0) {
+      this.altitude = 0; 
+      return "CRASH!"; 
+    } else {
+      return this.altitude; 
     }
+  }
+}
 
     // 👉 CHALLENGE 3
     // 🧠 Build a Bulb class.
@@ -48,9 +75,26 @@
     // 🧠 The methods work as one might expect, changing the value of `isOn` to the appropriate Boolean.
     // 🧠 The methods also return one of these two strings: "You turned the bulb ON", or "You turned the bulb OFF".
     class Bulb {
+  constructor() {
+    this.isOn = false; // Initial state of the bulb is off
+  }
 
-    }
+  turnOn() {
+    this.isOn = true; // Turn the bulb on
+    return "You turned the bulb ON";
+  }
 
+  turnOff() {
+    this.isOn = false; // Turn the bulb off
+    return "You turned the bulb OFF";
+  }
+
+  toggle() {
+    this.isOn = !this.isOn; // Toggle the bulb's state
+    // Return a message based on the new state
+    return this.isOn ? "You turned the bulb ON" : "You turned the bulb OFF";
+  }
+}
     // 👉 CHALLENGE 4
     // 🧠 Build a CountDown class that can count down starting at any number we pass to the constructor.
     // 🧠 CountDowns have a `count` method that returns a string in the format "10!".
@@ -65,9 +109,26 @@
     //   minusThree.count() // returns "Liftoff!"
     //   minusThree.count() // returns null
     //   minusThree.count() // returns null
-    class CountDown {
+      class CountDown {
+  constructor(startingNumber) {
+    this.startingNumber = startingNumber; // Initialize the starting number
+    this.currentNumber = startingNumber; // Initialize the current number to the starting number
+  }
 
+  count() {
+    if (this.currentNumber > 0) {
+      const countdownString = this.currentNumber + "!"; // Create the countdown string
+      this.currentNumber--; // Decrease the current number for the next call
+      return countdownString; // Return the countdown string
+    } else if (this.currentNumber === 0) {
+      this.currentNumber--; // Decrease the current number to indicate liftoff
+      return "Liftoff!"; // Return "Liftoff!" when count reaches zero
+    } else {
+      return null; // Return null after liftoff
     }
+  }
+}
+    
 
     // 🧪 TESTS, do not work below this line
     // 🧪 TESTS, do not work below this line
